--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,16 @@
         android:appComponentFactory="whateverString"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
 
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
-        <activity android:name=".Activity.ResetCodeActivity"></activity>
+        <activity
+            android:name=".Activity.ResetCodeActivity"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".Activity.ResetPassActivity" />
         <activity android:name=".Activity.ActivateCodeActivity"></activity>
         <activity android:name=".Activity.SliderActivity" />
