--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.mesibo.api:mesibo:1.0.89'
+    implementation 'com.mesibo.api:ui:1.1.31'
+    implementation 'com.mesibo.api:calls:1.0.74'
 
 }
 
