--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,17 +7,12 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
 
     <application
         android:name=".Api.MyApplication"
@@ -25,26 +20,23 @@
         android:appComponentFactory="whateverString"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:appComponentFactory">
+        <activity android:name=".Activity.VoicevideoActivity"></activity>
         <activity
             android:name=".Activity.ResetCodeActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity android:name=".Activity.ResetPassActivity" />
-        <activity android:name=".Activity.ActivateCodeActivity"></activity>
+        <activity android:name=".Activity.ActivateCodeActivity" />
         <activity android:name=".Activity.SliderActivity" />
         <activity android:name=".Activity.EditUserProfileActivity" />
         <activity
             android:name=".Activity.SessionActivity"
             android:theme="@style/MyActionBar" />
-        <activity android:name=".Activity.SessionTimeActivity">
-
-        </activity>
+        <activity android:name=".Activity.SessionTimeActivity"></activity>
         <activity android:name=".Activity.UserprofileActivity" />
         <activity android:name=".Activity.BeneficiaryActivity" />
         <activity android:name=".Activity.AdvisorProfileActivity" />
