--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'android.arch.work:work-runtime:1.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.hbb20:ccp:2.3.2'
+
 
 
 
