--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     repositories {
+        maven { url 'https://www.jitpack.io' }
+
         google()
         jcenter()
         
@@ -9,6 +11,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath 'com.google.gms:google-services:4.3.2'
+        classpath 'io.realm:realm-gradle-plugin:5.4.1'
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
